SERVER-114508 Allow localField override in JOO (#44495)

GitOrigin-RevId: de696c3697c672467836ae046e6c70ef1e7e4432